<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zeeshan.savingpassword.MainActivity">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/settings" />
    <View
        android:layout_below="@+id/tv_settings"
        android:id="@+id/line1"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_below="@+id/line1"
        android:id="@+id/tv_password"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/password" />

    <TextView
        android:id="@+id/tv_set_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#6c6868"
        android:text="@string/set_password"
        android:layout_alignBaseline="@+id/tv_password"
        android:layout_alignBottom="@+id/tv_password"
        android:layout_alignLeft="@+id/save_button"
        android:layout_alignStart="@+id/save_button" />

    <EditText
        android:layout_below="@+id/tv_set_your_password"
        android:id="@+id/ev_password"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#3f50cc"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />


    <TextView
        android:layout_below="@+id/ev_password"
        android:id="@+id/tv_security_settings"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#252323"
        android:text="@string/security_settings" />

    <View
        android:layout_below="@+id/tv_security_settings"
        android:id="@+id/line2"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_below="@+id/line2"
        android:id="@+id/ll_screen_lock_outer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_screen_lock"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_screen_lock"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#252323"
                android:textStyle="bold"
                android:text="@string/screen_lock" />

            <TextView
                android:id="@+id/tv_lock_the_screen_with_password"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#252323"
                android:text="@string/lock_screen" />

        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:id="@+id/rl_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_screen_pw"
                android:checked="false"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


    </LinearLayout>
    <View
        android:layout_below="@+id/ll_screen_lock_outer"
        android:id="@+id/line3"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_below="@+id/ll_screen_lock_outer"
        android:id="@+id/tv_remainder_for_updation"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#252323"
        android:hint="@string/update_reminder" />
    <TextView
        android:layout_below="@+id/tv_remainder_for_updation"
        android:id="@+id/tv_set_update_remainder_frequency"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#6c6868"
        android:text="@string/set_reminder_frequency" />

    <EditText
        android:layout_below="@+id/tv_set_update_remainder_frequency"
        android:id="@+id/ev_set_frequency"
        android:hint="@string/enter_frequency"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#3f50cc"/>
    <View
        android:layout_below="@+id/ev_set_frequency"
        android:id="@+id/line4"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:layout_below="@+id/line4"
        android:id="@+id/save_button"
        android:text="@string/save_preference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <Button
        android:layout_below="@+id/save_button"
        android:id="@+id/next_button"
        android:text="@string/next_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>
